Use event target in dialogs.

--- a/.jshintrc
+++ b/.jshintrc
@@ -206,6 +206,7 @@
 		"AMD_USER_ACCOUNTS_RT": false,
 		"AMD_USER_ACCOUNTS_RT": false,
 		"MB_NAVIGATOR_CMDLINE_TOGGLE_ACTION": false,
+		"MB_LAYOUTS_THEME_SWITECH_ACTION": false,
 		"xxx": false
 	}
 }
