--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
 		"eslint": "^4.18.2",
 		"grunt": "^0.4.5",
 		"grunt-angular-templates": "^0.5.7",
+		"grunt-bowercopy": "^1.2.4",
 		"grunt-concurrent": "^1.0.0",
 		"grunt-connect-proxy": "^0.2.0",
 		"grunt-contrib-clean": "^0.6.0",
+		"grunt-contrib-compress": "^1.4.3",
 		"grunt-contrib-concat": "^0.5.0",
 		"grunt-contrib-connect": "^0.9.0",
 		"grunt-contrib-copy": "^0.7.0",
@@ -51,9 +53,7 @@
 		"karma-opera-launcher": "^1.0.0",
 		"karma-safari-launcher": "^1.0.0",
 		"karma-safaritechpreview-launcher": "0.0.6",
-		"time-grunt": "^1.0.0",
-		"grunt-bowercopy": "^1.2.4",
-		"grunt-contrib-compress": "^1.4.3"
+		"time-grunt": "^1.0.0"
 	},
 	"engines": {
 		"node": ">=0.10.0"
@@ -63,6 +63,5 @@
 		"build": "grunt",
 		"dev": "grunt serve",
 		"dev:dist": "grunt serve:dist"
-	},
-	"dependencies": {}
+	}
 }
