--- a/webpack/package.json
+++ b/webpack/package.json
@@ -11,7 +11,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.13",
 		"@babel/preset-env": "^7.13",
-		
+		"babel-plugin-angularjs-annotate": "^0.10",
 		
 		"autoprefixer": "^10.2.4",
 		"postcss": "^8.2.6",
