--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
 		"url": "https://github.com/viraweb123/vw-dashboard/issues"
 	},
 	"scripts": {
-		"build": "webpack --mode production --bail --progress --profile",
+		"build": "webpack --config webpack.prod.js",
+		"serve": "webpack serve --history-api-fallback --inline --progress --config webpack.dev.js",
 		"test": "karma start",
-		"test-watch": "karma start --auto-watch --no-single-run",
-		"serve": "webpack serve --mode development --history-api-fallback --inline --progress"
+		"test-watch": "karma start --auto-watch --no-single-run"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.13",
-		"@babel/preset-env": "^7.13",
-		"@babel/plugin-transform-modules-commonjs": "^7.13",
+		"@babel/core": "7.2.0",
+		"@babel/preset-env": "7.2.0",
+		"@babel/plugin-transform-modules-commonjs": "7.2.0",
+		"babel-plugin-angularjs-annotate": "^0.10",
 		
 		"autoprefixer": "^10.2.4",
 		"postcss": "^8.2.6",
+		"postcss-preset-env": "^6.7",
 
 		"webpack": "^5.24.1",
 		"webpack-cli": "^4.5.0",
@@ -35,7 +37,6 @@
 		"html-loader": "^2.1",
 		"file-loader": "^6.2",
 
-		"babel-plugin-angularjs-annotate": "^0.10",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^7.0.0",
 		"html-webpack-plugin": "^5.2.0",
