--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "vw-dashboard",
 	"version": "7.0.0",
+	"title": "ViraWeb Dashboard",
 	"description": "A modern dashboard",
 	"author": "Mostafa Barmshory",
 	"license": "MIT",
@@ -40,7 +41,9 @@
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^7.0.0",
 		"html-webpack-plugin": "^5.2.0",
-		"mini-css-extract-plugin": "^1.3.8"
+		"mini-css-extract-plugin": "^1.3.8",
+		"zip-webpack-plugin": "^4.0",
+		"generate-json-webpack-plugin": "^2.0.0"
 	},
 	"dependencies": {
 		"mblowfish": "file:/home/maso/git/mblowfish/mblowfish-core"
