--- a/package.json
+++ b/package.json
@@ -31,6 +31,15 @@
 		"generate-json-webpack-plugin": "^2.0.0",
 		"html-loader": "2.1.x",
 		"html-webpack-plugin": "^5.2.0",
+		"karma": "^6.1",
+		"karma-chrome-launcher": "^3.1",
+		"karma-cli": "^2.0",
+		"karma-coverage-es6": "^0.2",
+		"karma-firefox-launcher": "^2.1",
+		"karma-jasmine": "^4.0",
+		"karma-sourcemap-loader": "^0.3.8",
+		"karma-spec-reporter": "0.0.32",
+		"karma-webpack": "^5.0",
 		"mini-css-extract-plugin": "^1.3.8",
 		"postcss": "^8.3.x",
 		"postcss-loader": "^5.0",
@@ -40,19 +49,10 @@
 		"webpack": "5.38.x",
 		"webpack-cli": "4.7.x",
 		"webpack-dev-server": "^3",
-		"zip-webpack-plugin": "^4.0",
-		"karma": "^6.1",
-		"karma-cli": "^2.0",
-		"karma-jasmine": "^4.0",
-		"karma-coverage-es6": "^0.2",
-		"karma-chrome-launcher": "^3.1",
-		"karma-firefox-launcher": "^2.1",
-		"karma-webpack": "^5.0",
-		"karma-sourcemap-loader": "^0.3.8",
-		"karma-spec-reporter": "0.0.32"
+		"zip-webpack-plugin": "^4.0"
 	},
 	"dependencies": {
-		"mblowfish": "file:/home/maso/git/viraweb123/mblowfish"
+		"mblowfish": "file:../mblowfish"
 	},
 	"peerDependencies": {},
 	"peerDependenciesMeta": {},
